k8s-hw.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: k8s-homework
  namespace: default
  labels:
    app: k8s-homework

spec:
  replicas: 1
  selector:
    matchLabels:
     app: k8s-homework

  template:
    metadata:
      labels:
        app: k8s-homework

    spec:
      containers:
      - name: k8s-homework
        image: yanivomc/spring-music:latest
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service

metadata:
  name: k8s-homework-svc
  namespace: default

spec:
  type: ClusterIP
  selector:
    app: k8s-homework
  ports:
  - port: 8090
    targetPort: 8080
