ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: k8s-homework-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
  - http:
      paths:

      - pathType: Prefix
        path: /music(/|$)(.*)
        backend:
          service:
            name: k8s-homework-svc
            port:
              number: 8090

      - pathType: Prefix
        path: /(.*)
        backend:
          service:
            name: k8s-homework-svc
            port:
              number: 8090
